--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -2,7 +2,7 @@
 
 .header {
     height: 50vh;
-    background-image: url(sample_header.jpg);
+    background-image: url(../images/headers/sample_header.jpg);
     background-position: bottom;
     background-size: cover;
     position: relative;
