--- a/assets/css/splash.css
+++ b/assets/css/splash.css
@@ -59,7 +59,7 @@
 
  .btn-splash:hover,
  .btn-splash:active {
-    background: linear-gradient(329deg, #fece8c, #fe5651, #6d366f);
+    background: linear-gradient(329deg, #6d366f, #fe5651, #fece8c);
     background-size: 300% 300%;
     animation: btn-splash-animate 5s ease infinite;
 
