--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -2,11 +2,63 @@
 
 .header {
     height: 50vh;
-    background-image: url(../images/headers/sample_header.jpg);
-    background-position: bottom;
     background-size: cover;
     position: relative;
 }
+
+.header-home {
+  background-image: url(../images/headers/sample_header.jpg);
+  background-position: center;
+}
+
+.header-events {
+  background-image: url(../images/headers/events_header.jpg);
+  background-position: top;
+}
+
+.header-dining {
+  background-image: url(../images/headers/dining_header.jpg);
+  background-position: top;
+}
+
+/* HEADER TEXTBOX */
+
+.header__textbox {
+  position: absolute;
+  left: 50%;
+  top: 40%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  width: 90%;
+}
+
+.heading-text {
+  color: #fff;
+  font-size: 90px;
+  font-weight: bold;
+  text-shadow: 3px 3px 4px rgba(0, 0, 0, .5);
+}
+
+
+
+.header-events__textbox {
+  position: absolute;
+  right: 50px;
+  top: 80px;
+}
+
+.events-heading {
+  color: #4F2E65;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.events-heading-sub {
+  font-size: 80px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
 
 /* NAVBAR */
 
