added links to quiz in the homepage and profile page

--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -1,37 +1,41 @@
 .profile-box {
     background-image: url(../images/profile/adventurous-bg.jpeg);
-     padding: 10px 0;
-     text-align: center;
-     border-radius: 4px;
-     height: 520px;
-     position: relative;
- }
+    padding: 10px 0;
+    text-align: center;
+    border-radius: 4px;
+    height: 400px;
+    position: relative;
+}
 
- .profile__img {
-     height: 500px;
-     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, .2);
+.profile__img {
+    height: 500px;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, .2);
     border-radius: 3px;
- }
+}
 
- .profile__text {
-     font-size: 18px;
-    height: 500px;;
-     padding: 100px;
-     box-shadow: 0 15px 40px rgba(0, 0, 0, .2);
+.profile__text {
+    font-size: 22px;
+    height: 500px;
+    color: #fff;
+    padding: 100px;
     border-radius: 3px;
- }
+    display: block;
+    justify-content: center;
+}
 
- .profile__title {
+.profile__title {
     font-family: 'Oleo Script Swash Caps', cursive;
     color: white;
     font-size: 70px;
     position: absolute;
     top: 5px;
     right: 50px;
- }
+}
 
- /* FAVORITES SECTION */
- .favs-title {
-     font-size: 25px;
-     color: #4F2E65;
- }
+
+/* FAVORITES SECTION */
+
+.favs-title {
+    font-size: 25px;
+    color: #4F2E65;
+}
