styled media page

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -21,6 +21,11 @@
     background-position: top;
 }
 
+.header-media {
+    background-image: url(../images/headers/media_header.jpg);
+    background-position: center;
+}
+
 
 /* HEADER TEXTBOX */
 
