--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -4,7 +4,6 @@
     -moz-perspective: 1500px;
     height: 400px;
     position: relative;
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0 .15);
     margin-bottom: 100px;
 }
 
@@ -84,4 +83,31 @@
 
 .card-back-3 {
     background-image: linear-gradient(to bottom left, #fe5651, #4F2E65);
+}
+
+
+/* CAROUSEL */
+
+.carousel-container {
+    position: relative;
+    text-align: center;
+    padding: 10px;
+    margin-bottom: 100px;
+}
+
+.carousel-img {
+    height: 500px;
+}
+
+.carousel-heading {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    border-radius: 5px;
+    font-size: 70px;
+    /* font-family: 'Oleo Script Swash Caps', cursive; */
+    color: #fff;
+    text-shadow: 0px 2px 4px rgba(0, 0, 0, .5);
 }
