--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,8 +22,9 @@ body {
     font-weight: 700;
     font-size: 45px;
     color: #4F2E65;
-    margin-bottom: 40px;
+    margin-bottom: 70px;
     hyphens: auto;
+    margin-top: 100px;
 }
 
 .gradient-text {
